log/laser_app_log_190207_161302.txt
2019-02-07T16:13:02|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\laser\laser_app.py", line 34, in <module>
    app = Laser_App(sys.argv)
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\laser\laser_app.py", line 17, in setup
    from laser_hardware import LaserHW
  File "C:\LabPrograms\Python\laser\laser_hardware.py", line 54
    self.laser_status.update_choice_index_value(self.laser_status.choices.index(self.laser_status.val))
    ^
IndentationError: unexpected indent

